# Corner-Man-OS

./: .gitignore  Dockerfile  PyWhatKit_DB.txt  README.md  The_plug.py  call_function.py  call_functions.py  docker-compose.yml  headhunter.py  main.py  pyproject.toml  requirements.txt  smoke_detector.py  test.py  test2.py
Tools/: tools.py
calculator/: lorem.txt
calculator/pkg/: moredir.txt
functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
static/: style.css
templates/: agent.html  base.html  index.html
