[project]
name = "workflow2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.1",
    "ddgs>=9.9.1",
    "google-genai==1.12.1",
    "python-dotenv==1.1.0",
    "pywhatkit>=5.4",
    "schedule>=1.2.2",
    "scrapegraph-py>=1.42.0",
]
